[package]
name = "sink-display"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "=1.9.0", features = ["attributes","unstable"] }
async-trait = "0.1"
shared-types = { path = "../shared-types" }
zenoh-flow = { git = "https://github.com/atolab/zenoh-flow.git", branch = "fix/end-to-end-deadline" }

[lib]
crate-type=["cdylib"]
